--- a/gx/great_expectations.yml
+++ b/gx/great_expectations.yml
@@ -12,7 +12,13 @@ config_version: 3.0
 
 # Datasources tell Great Expectations where your data lives and how to get it.
 # Read more at https://docs.greatexpectations.io/docs/guides/connecting_to_your_data/connect_to_data_overview
-datasources: {}
+datasources: 
+  files_datasource:
+    class_name: PandasDatasource
+
+validation_operators:
+  action_list_operator:
+    class_name: ActionListValidationOperator
 
 # This config file supports variable substitution which enables: 1) keeping
 # secrets out of source control & 2) environment-based configuration changes
